# backend/api/server/agntcy/identity/platform/v1alpha1/auth.pb.go
@@ -100,8 +100,8 @@ type Session struct {
 	ToolName *string `protobuf:"bytes,4,opt,name=tool_name,json=toolName,proto3,oneof" json:"tool_name,omitempty"`
 	// The user ID associated with the Session.
 	UserId *string `protobuf:"bytes,5,opt,name=user_id,json=userId,proto3,oneof" json:"user_id,omitempty"`
-	// The token ID associated with the Session.
-	TokenId *string `protobuf:"bytes,6,opt,name=token_id,json=tokenId,proto3,oneof" json:"token_id,omitempty"`
+	// The access token associated with the Session.
+	AccessToken *string `protobuf:"bytes,6,opt,name=access_token,json=accessToken,proto3,oneof" json:"access_token,omitempty"`
 	// The authorization code associated with the Session.
 	Code *string `protobuf:"bytes,7,opt,name=code,proto3,oneof" json:"code,omitempty"`
 	// The creation time of the Session.
@@ -177,9 +177,9 @@ func (x *Session) GetUserId() string {
 	return ""
 }
 
-func (x *Session) GetTokenId() string {
-	if x != nil && x.TokenId != nil {
-		return *x.TokenId
+func (x *Session) GetAccessToken() string {
+	if x != nil && x.AccessToken != nil {
+		return *x.AccessToken
 	}
 	return ""
 }
@@ -205,61 +205,6 @@ func (x *Session) GetExpiresAt() int64 {
 	return 0
 }
 
-// Identity Platform Token
-type Token struct {
-	state protoimpl.MessageState `protogen:"open.v1"`
-	// A unique identifier for the Token.
-	Id *string `protobuf:"bytes,1,opt,name=id,proto3,oneof" json:"id,omitempty"`
-	// Token value.
-	Value         *string `protobuf:"bytes,2,opt,name=value,proto3,oneof" json:"value,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *Token) Reset() {
-	*x = Token{}
-	mi := &file_agntcy_identity_platform_v1alpha1_auth_proto_msgTypes[2]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *Token) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*Token) ProtoMessage() {}
-
-func (x *Token) ProtoReflect() protoreflect.Message {
-	mi := &file_agntcy_identity_platform_v1alpha1_auth_proto_msgTypes[2]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use Token.ProtoReflect.Descriptor instead.
-func (*Token) Descriptor() ([]byte, []int) {
-	return file_agntcy_identity_platform_v1alpha1_auth_proto_rawDescGZIP(), []int{2}
-}
-
-func (x *Token) GetId() string {
-	if x != nil && x.Id != nil {
-		return *x.Id
-	}
-	return ""
-}
-
-func (x *Token) GetValue() string {
-	if x != nil && x.Value != nil {
-		return *x.Value
-	}
-	return ""
-}
-
 var File_agntcy_identity_platform_v1alpha1_auth_proto protoreflect.FileDescriptor
 
 const file_agntcy_identity_platform_v1alpha1_auth_proto_rawDesc = "" +
@@ -272,15 +217,15 @@ const file_agntcy_identity_platform_v1alpha1_auth_proto_rawDesc = "" +
 	"\x03_idB\n" +
 	"\n" +
 	"\b_user_idB\x15\n" +
-	"\x13_subscription_token\"\x93\x03\n" +
+	"\x13_subscription_token\"\x9f\x03\n" +
 	"\aSession\x12\x13\n" +
 	"\x02id\x18\x01 \x01(\tH\x00R\x02id\x88\x01\x01\x12%\n" +
 	"\fowner_app_id\x18\x02 \x01(\tH\x01R\n" +
 	"ownerAppId\x88\x01\x01\x12\x1a\n" +
 	"\x06app_id\x18\x03 \x01(\tH\x02R\x05appId\x88\x01\x01\x12 \n" +
 	"\ttool_name\x18\x04 \x01(\tH\x03R\btoolName\x88\x01\x01\x12\x1c\n" +
-	"\auser_id\x18\x05 \x01(\tH\x04R\x06userId\x88\x01\x01\x12\x1e\n" +
-	"\btoken_id\x18\x06 \x01(\tH\x05R\atokenId\x88\x01\x01\x12\x17\n" +
+	"\auser_id\x18\x05 \x01(\tH\x04R\x06userId\x88\x01\x01\x12&\n" +
+	"\faccess_token\x18\x06 \x01(\tH\x05R\vaccessToken\x88\x01\x01\x12\x17\n" +
 	"\x04code\x18\a \x01(\tH\x06R\x04code\x88\x01\x01\x12\"\n" +
 	"\n" +
 	"created_at\x18\b \x01(\x03H\aR\tcreatedAt\x88\x01\x01\x12\"\n" +
@@ -292,16 +237,11 @@ const file_agntcy_identity_platform_v1alpha1_auth_proto_rawDesc = "" +
 	"\n" +
 	"_tool_nameB\n" +
 	"\n" +
-	"\b_user_idB\v\n" +
-	"\t_token_idB\a\n" +
+	"\b_user_idB\x0f\n" +
+	"\r_access_tokenB\a\n" +
 	"\x05_codeB\r\n" +
 	"\v_created_atB\r\n" +
-	"\v_expires_at\"H\n" +
-	"\x05Token\x12\x13\n" +
-	"\x02id\x18\x01 \x01(\tH\x00R\x02id\x88\x01\x01\x12\x19\n" +
-	"\x05value\x18\x02 \x01(\tH\x01R\x05value\x88\x01\x01B\x05\n" +
-	"\x03_idB\b\n" +
-	"\x06_valueBkZigithub.com/agntcy/identity-platform/api/server/agntcy/identity/platform/v1alpha1;identity_platform_sdk_gob\x06proto3"
+	"\v_expires_atBkZigithub.com/agntcy/identity-platform/api/server/agntcy/identity/platform/v1alpha1;identity_platform_sdk_gob\x06proto3"
 
 var (
 	file_agntcy_identity_platform_v1alpha1_auth_proto_rawDescOnce sync.Once
@@ -315,11 +255,10 @@ func file_agntcy_identity_platform_v1alpha1_auth_proto_rawDescGZIP() []byte {
 	return file_agntcy_identity_platform_v1alpha1_auth_proto_rawDescData
 }
 
-var file_agntcy_identity_platform_v1alpha1_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_agntcy_identity_platform_v1alpha1_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_agntcy_identity_platform_v1alpha1_auth_proto_goTypes = []any{
 	(*Device)(nil),  // 0: agntcy.identity.platform.v1alpha1.Device
 	(*Session)(nil), // 1: agntcy.identity.platform.v1alpha1.Session
-	(*Token)(nil),   // 2: agntcy.identity.platform.v1alpha1.Token
 }
 var file_agntcy_identity_platform_v1alpha1_auth_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -336,14 +275,13 @@ func file_agntcy_identity_platform_v1alpha1_auth_proto_init() {
 	}
 	file_agntcy_identity_platform_v1alpha1_auth_proto_msgTypes[0].OneofWrappers = []any{}
 	file_agntcy_identity_platform_v1alpha1_auth_proto_msgTypes[1].OneofWrappers = []any{}
-	file_agntcy_identity_platform_v1alpha1_auth_proto_msgTypes[2].OneofWrappers = []any{}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_agntcy_identity_platform_v1alpha1_auth_proto_rawDesc), len(file_agntcy_identity_platform_v1alpha1_auth_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   3,
+			NumMessages:   2,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
