# backend/api/spec/static/api/openapi/platform/v1alpha1/openapi.yaml
@@ -1,6 +1,3 @@
-# Copyright 2025 Copyright AGNTCY Contributors (https://github.com/agntcy)
-# SPDX-License-Identifier: Apache-2.0
-
 # Generated with protoc-gen-openapi
 # https://github.com/google/gnostic/tree/master/cmd/protoc-gen-openapi
 
@@ -1088,23 +1085,12 @@ components:
                     type: string
                     description: A tool name for the Task.
             description: Identity Platform Policy Task
-        Token:
-            type: object
-            properties:
-                id:
-                    type: string
-                    description: A unique identifier for the Token.
-                value:
-                    type: string
-                    description: Token value.
-            description: Identity Platform Token
         TokenResponse:
             type: object
             properties:
-                token:
-                    allOf:
-                        - $ref: '#/components/schemas/Token'
-                    description: The token issued to the Agent or MCP Server.
+                accessToken:
+                    type: string
+                    description: The access token issued to the Agent or MCP Server.
         VerifiableCredential:
             type: object
             properties:
